--- a/.gitignore
+++ b/.gitignore
@@ -59,7 +59,7 @@ coverage.xml
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
-/migrations/
+**/migrations
 
 # Flask stuff:
 instance/
@@ -123,3 +123,4 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
