--- a/.gitignore
+++ b/.gitignore
@@ -59,6 +59,7 @@ coverage.xml
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
+**/migrations
 
 # Flask stuff:
 instance/
@@ -122,3 +123,4 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
